--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.github.maliciousfiles</groupId>
-  <artifactId>Gravestone</artifactId>
+  <artifactId>GravestonePlugin</artifactId>
   <version>1.0</version>
   <packaging>jar</packaging>
 
