--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
-name: Gravestone
+name: GravestonePlugin
 version: '${project.version}'
-main: io.github.maliciousfiles.gravestone.Gravestone
+main: io.github.maliciousfiles.gravestone.GravestonePlugin
 api-version: '1.21'
 authors: [MaliciousFiles]
 description: Stores items on player death
